# hack-modeling

./: .gitignore  .gitmodules  README.md
Types/OCaml/real-world-ocaml/ch01/: README.md  dune-project
Types/OCaml/real-world-ocaml/ch01/lib/: dune  functions.ml  record_variant.ml
Types/OCaml/real-world-ocaml/ch01/test/: dune
Types/OCaml/real-world-ocaml/ch01/utop/: calculator.utop
ml/codes/hands-on-ml/: README.md  pyproject.toml
ml/codes/hands-on-ml/sbin/: del_tf_logs.sh  run_tensorboard.sh
ml/codes/hands-on-ml/src/dl_with_python/: __init__.py  dlwp_c02.ipynb  dlwp_c02_nn_from_scratch.py  dlwp_c02_tensor.py  dlwp_c03.ipynb  dlwp_c03_keras.py  dlwp_c04.ipynb  dlwp_c05.ipynb  dlwp_c07.ipynb
ml/codes/hands-on-ml/src/hands_on_ml/: __init__.py  dim_reduction.py  end_to_end_project.ipynb  end_to_end_project.py  random_forests.py  unsupervised.py
ml/codes/hands-on-ml/src/hands_on_ml/deep_learning/: __init__.py
ml/codes/hands-on-ml/src/tf_in_action/: __init__.py  c02_01_mlp.py
ml/codes/hands-on-ml/src/util/: tf.py
ml/codes/hands-on-ml/tests/test_dl_with_python/: __init__.py  test_dlwp_c02_nn_building_blocks.py  test_dlwp_c03_tensorflow_keras.py
ml/codes/hands-on-ml/tests/test_hands_on_ml/: __init__.py  test_hom_c02_end_to_end_project.py
ml/codes/hands-on-ml/tests/test_hands_on_ml/deep_learning/: __init__.py  test_hom_c10_keras.py
ml/codes/hands-on-ml/tests/test_tf_in_action/: __init__.py  test_tensorboard.py  test_tfia_c02_building_blocks.py  test_tfia_c02_network_computation.py  test_tfia_c03_data.py  test_tfia_c03_keras.py  test_tifa_c04_neural_networks.py  test_tifa_c05_transformers.py
ml/codes/python-for-data-analysis/: README.md  pyproject.toml
ml/codes/python-for-data-analysis/src/math_for_programmers/: README.md
ml/codes/python-for-data-analysis/src/programming_collective_intelligence/: __init__.py  clustering.py  collaborative_filtering.py  decision_tree.py  document_classification.py  k_nearest_neighbors.py  optimization.py  searching_ranking.py  svm.py
ml/codes/python-for-data-analysis/src/programming_collective_intelligence/tools/: __init__.py  data_structure.py  database.py  evaluation.py  feeds.py  (+2 more)
ml/codes/python-for-data-analysis/tests/test_bokeh/: test_first_step.py
ml/codes/python-for-data-analysis/tests/test_datawrangling/: __init__.py  test_data_regex.py  test_data_visualizing.py  test_data_web.py  test_data_web_browser.py  test_data_web_spidering.py  test_parse_csv.py  test_parse_excel.py  test_parse_json.py  test_parse_pdf.py  test_parse_xml.py  test_table.py
ml/codes/python-for-data-analysis/tests/test_matplotlib/: test_quick_start_guide.py
ml/codes/python-for-data-analysis/tests/test_numpy/: test_ndarray.py  test_testing.py  test_ufunc.py
ml/codes/python-for-data-analysis/tests/test_programming_collective_intelligence/: test_clustering.py  test_collaborative_filtering.py  test_decision_tree.py  test_document_classification.py  test_k_nearest_neighbors.py  test_searching_ranking.py  test_svm.py
ml/codes/python-for-data-analysis/tests/test_util/: test_small_packages.py  test_util.py
pl/Types/OCaml/real-world-ocaml/ch02/: dune-project
(+857 files in other folders)
