[project]
name = "python-for-data-analysis"
version = "0.1.0"
description = ""
authors = [{ name = "jargonzhou", email = "zhoujiagen@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  "numpy (>=2.3.2,<3.0.0)",
  "matplotlib (>=3.10.5,<4.0.0)",
  "bokeh (>=3.7.3,<4.0.0)",
  "slate3k (>=0.5.3,<0.6.0)",
  "xlrd (>=2.0.2,<3.0.0)",
  "treelib (>=1.8.0,<2.0.0)",
  "prettytable (>=3.16.0,<4.0.0)",
]

[tool.poetry]
packages = [{ include = "python_for_data_analysis", from = "src" }]


[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"

# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = ['tests/.*/test_.*\.py']

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
