(lang dune 3.16)

(name ch02)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ch02)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
  (stdio
   (>= v0.17.0))
  (ppx_jane
   (>= v0.17.0))
  (ppx_inline_test
   (>= v0.17.0))
  (ppx_expect
   (>= v0.17.0))
  (ppx_assert
   (>= v0.17.0))
  (base
   (>= v0.17.0))
  ocaml
  dune)
 (tags
  (topics "to describe" your project)))